EDA and Model Training

--- a/notebook/2. MODEL TRAINING.ipynb
+++ b/notebook/2. MODEL TRAINING.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "id": "b080dfb2",
    "metadata": {},
    "outputs": [],
@@ -41,7 +41,7 @@
     "from sklearn.model_selection import RandomizedSearchCV\n",
     "from catboost import CatBoostRegressor\n",
     "from xgboost import XGBRegressor\n",
-    "import warnings"
+    "import warnings\n"
    ]
   },
   {
@@ -54,12 +54,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "e11c6255",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv('data/stud.csv')"
+    "df = pd.read_csv('data/stud.csv')\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -72,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "e7e412a2",
    "metadata": {},
    "outputs": [
@@ -183,7 +185,7 @@
        "4                    none          76             78             75  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -202,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "56d72fde",
    "metadata": {},
    "outputs": [],
@@ -212,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "cd613177",
    "metadata": {},
    "outputs": [
@@ -317,7 +319,7 @@
        "4                    none             78             75  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -328,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "f237ea14",
    "metadata": {},
    "outputs": [
@@ -364,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "924b7f9d",
    "metadata": {},
    "outputs": [],
@@ -374,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "ffc69816",
    "metadata": {},
    "outputs": [
@@ -395,7 +397,7 @@
        "Name: math_score, Length: 1000, dtype: int64"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -406,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "1e290fe3",
    "metadata": {},
    "outputs": [],
@@ -431,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "id": "9c68f99a",
    "metadata": {},
    "outputs": [],
@@ -442,6 +444,39 @@
   {
    "cell_type": "code",
    "execution_count": 15,
+   "id": "f73e145e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 1.        ,  0.        ,  0.        , ...,  1.        ,\n",
+       "         0.19399858,  0.39149181],\n",
+       "       [ 1.        ,  0.        ,  0.        , ...,  0.        ,\n",
+       "         1.42747598,  1.31326868],\n",
+       "       [ 1.        ,  0.        ,  0.        , ...,  1.        ,\n",
+       "         1.77010859,  1.64247471],\n",
+       "       ...,\n",
+       "       [ 1.        ,  0.        ,  0.        , ...,  0.        ,\n",
+       "         0.12547206, -0.20107904],\n",
+       "       [ 1.        ,  0.        ,  0.        , ...,  0.        ,\n",
+       "         0.60515772,  0.58901542],\n",
+       "       [ 1.        ,  0.        ,  0.        , ...,  1.        ,\n",
+       "         1.15336989,  1.18158627]])"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "id": "72459f1d",
    "metadata": {},
    "outputs": [
@@ -451,7 +486,7 @@
        "(1000, 19)"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -578,22 +613,22 @@
       "- R2 Score: 0.9997\n",
       "----------------------------------\n",
       "Model performance for Test set\n",
-      "- Root Mean Squared Error: 7.8750\n",
-      "- Mean Absolute Error: 6.3450\n",
-      "- R2 Score: 0.7451\n",
+      "- Root Mean Squared Error: 7.9546\n",
+      "- Mean Absolute Error: 6.2950\n",
+      "- R2 Score: 0.7400\n",
       "===================================\n",
       "\n",
       "\n",
       "Random Forest Regressor\n",
       "Model performance for Training set\n",
-      "- Root Mean Squared Error: 2.2929\n",
-      "- Mean Absolute Error: 1.8265\n",
-      "- R2 Score: 0.9767\n",
+      "- Root Mean Squared Error: 2.2981\n",
+      "- Mean Absolute Error: 1.8287\n",
+      "- R2 Score: 0.9766\n",
       "----------------------------------\n",
       "Model performance for Test set\n",
-      "- Root Mean Squared Error: 6.0127\n",
-      "- Mean Absolute Error: 4.6520\n",
-      "- R2 Score: 0.8514\n",
+      "- Root Mean Squared Error: 6.0453\n",
+      "- Mean Absolute Error: 4.6978\n",
+      "- R2 Score: 0.8498\n",
       "===================================\n",
       "\n",
       "\n",
@@ -625,14 +660,14 @@
       "\n",
       "AdaBoost Regressor\n",
       "Model performance for Training set\n",
-      "- Root Mean Squared Error: 5.8409\n",
-      "- Mean Absolute Error: 4.7826\n",
-      "- R2 Score: 0.8487\n",
+      "- Root Mean Squared Error: 5.7837\n",
+      "- Mean Absolute Error: 4.7416\n",
+      "- R2 Score: 0.8516\n",
       "----------------------------------\n",
       "Model performance for Test set\n",
-      "- Root Mean Squared Error: 6.1429\n",
-      "- Mean Absolute Error: 4.7966\n",
-      "- R2 Score: 0.8449\n",
+      "- Root Mean Squared Error: 6.0638\n",
+      "- Mean Absolute Error: 4.6668\n",
+      "- R2 Score: 0.8489\n",
       "===================================\n",
       "\n",
       "\n"
@@ -698,7 +733,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 20,
    "id": "e0159e5f",
    "metadata": {},
    "outputs": [
@@ -736,7 +771,7 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>Linear Regression</td>\n",
-       "      <td>0.880345</td>\n",
+       "      <td>0.880433</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
@@ -744,24 +779,24 @@
        "      <td>0.851632</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>AdaBoost Regressor</td>\n",
-       "      <td>0.849847</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>5</th>\n",
        "      <td>Random Forest Regressor</td>\n",
-       "      <td>0.847291</td>\n",
+       "      <td>0.849813</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>AdaBoost Regressor</td>\n",
+       "      <td>0.848893</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>XGBRegressor</td>\n",
+       "      <td>0.827797</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>Lasso</td>\n",
        "      <td>0.825320</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>XGBRegressor</td>\n",
-       "      <td>0.821589</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -771,7 +806,7 @@
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>Decision Tree</td>\n",
-       "      <td>0.760313</td>\n",
+       "      <td>0.739971</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -780,17 +815,17 @@
       "text/plain": [
        "                Model Name  R2_Score\n",
        "2                    Ridge  0.880593\n",
-       "0        Linear Regression  0.880345\n",
+       "0        Linear Regression  0.880433\n",
        "7    CatBoosting Regressor  0.851632\n",
-       "8       AdaBoost Regressor  0.849847\n",
-       "5  Random Forest Regressor  0.847291\n",
+       "5  Random Forest Regressor  0.849813\n",
+       "8       AdaBoost Regressor  0.848893\n",
+       "6             XGBRegressor  0.827797\n",
        "1                    Lasso  0.825320\n",
-       "6             XGBRegressor  0.821589\n",
        "3    K-Neighbors Regressor  0.783813\n",
-       "4            Decision Tree  0.760313"
+       "4            Decision Tree  0.739971"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -809,7 +844,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "id": "9a6ad559",
    "metadata": {},
    "outputs": [
@@ -839,7 +874,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "id": "eb557b0a",
    "metadata": {},
    "outputs": [
@@ -862,7 +897,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "id": "1e707ec3",
    "metadata": {},
    "outputs": [
@@ -891,7 +926,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "id": "7c9a8b48",
    "metadata": {},
    "outputs": [
@@ -1010,7 +1045,7 @@
        "[200 rows x 3 columns]"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
